Cleaned up code

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
       <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="materialize/css/materialize.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="materialize/css/style.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,7 +18,7 @@
             <div class="col s2 m2">
               <div class="card">
                 <div class="card-image">
-                   <img src="materialize/img/osmanska.jpg">
+                   <img src="images/osmanska.jpg">
                    <span class="card-title osmanska">OSMANSKA RIKET</span>
                     <a id="osmanska-modal" class="btn-floating halfway-fab waves-effect waves-light red btn modal-trigger" href="#länder"><i class="material-icons">create</i></a>
                 </div>
@@ -45,7 +45,7 @@
             <div class="col s2 m2">
               <div class="card">
                 <div class="card-image">
-                  <img src="materialize/img/spanien.jpg">
+                  <img src="images/spanien.jpg">
                   <span class="card-title spanien">SPANIEN</span>
                   <a id="spanien-modal" class="btn-floating halfway-fab waves-effect waves-light red btn modal-trigger" href="#länder"><i class="material-icons">create</i></a>
                 </div>
@@ -72,7 +72,7 @@
             <div class="col s2 m2">
                 <div class="card">
                     <div class="card-image">
-                      <img src="materialize/img/england.jpg">
+                      <img src="images/england.jpg">
                       <span class="card-title england">ENGLAND</span>
                       <a id="england-modal" class="btn-floating halfway-fab waves-effect waves-light red btn modal-trigger" href="#länder"><i class="material-icons">create</i></a>
                     </div>
@@ -99,7 +99,7 @@
                 <div class="col s2 m2">
                   <div class="card">
                     <div class="card-image">
-                        <img src="materialize/img/nederlanderna.jpg">
+                        <img src="images/nederlanderna.jpg">
                         <span class="card-title nederlanderna">NEDERLÄNDERNA</span>
                         <a id="nederlanderna-modal" class="btn-floating halfway-fab waves-effect waves-light red btn modal-trigger" href="#länder"><i class="material-icons">create</i></a>
                     </div>
@@ -126,7 +126,7 @@
                   <div class="col s2 m2">
                     <div class="card">
                         <div class="card-image">
-                            <img src="materialize/img/frankrike.jpg">
+                            <img src="images/frankrike.jpg">
                             <span class="card-title frankrike">FRANKRIKE</span>
                             <a id="frankrike-modal" class="btn-floating halfway-fab waves-effect waves-light red btn modal-trigger" href="#länder"><i class="material-icons">create</i></a>
                         </div>
@@ -169,204 +169,8 @@
                 
         
       <!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="materialize/js/materialize.js"></script>
-
-<script>
-$(document).ready(function(){
-  $('select').formSelect();
-})
-
-$(document).ready(function(){
-  $('.modal').modal();
-})
-
-</script>
+<script type="text/javascript" src="js/materialize.js"></script>
+<script type="text/javascript" src="js/gamestate.js"></script>
 
   </body>
 </html>
-
-<script> 
-
-let currentlyEditing = null
-const gameState = [
-{
-  name: 'OSMANSKA-RIKET',
-  mat: 2000000,
-  medborgare: 40000,
-  soldater: 9000,
-  handelsmän: 10,
-  båtar: 5,
-  guld: 1000,
-  slavar: 0,
-  textil: 3,
-  alkohol: 0,
-  religion: 'Islam',
-  kolonier: 0,
-  handelsväg: 'Sidenvägen'
-},
-{
-  name: 'SPANIEN',
-  mat: 1000000,
-  medborgare: 20000,
-  soldater: 7000,
-  handelsmän: 0,
-  båtar: 60,
-  guld: 1250,
-  slavar: 0,
-  textil: 0,
-  alkohol: 0,
-  religion: 'Katolicism',
-  kolonier: 0,
-  handelsväg: 'Ingen'
-},
-{
-  name: 'ENGLAND',
-  mat: 800000,
-  medborgare: 10000,
-  soldater: 2000,
-  handelsmän: 30,
-  båtar: 25,
-  guld: 500,
-  slavar: 5,
-  textil: 25,
-  alkohol: 50,
-  religion: 'Protestantism',
-  kolonier: 0,
-  handelsväg: 'Ingen'
-},
-{
-  name: 'NEDERLÄNDERNA',
-  mat: 500000,
-  medborgare: 5000,
-  soldater: 1000,
-  handelsmän: 50,
-  båtar: 20,
-  guld: 650,
-  slavar: 2,
-  textil: 30,
-  alkohol: 35,
-  religion: 'Protestantism',
-  kolonier: 0,
-  handelsväg: 'Ingen'
-},
-{
-  name: 'FRANKRIKE',
-  mat: 1000000,
-  medborgare: 15000,
-  soldater: 5000,
-  handelsmän: 1,
-  båtar: 10,
-  guld: 950,
-  slavar: 0,
-  textil: 5,
-  alkohol: 2,
-  religion: 'Katolicism',
-  kolonier: 0,
-  handelsväg: 'Ingen'
-}]
-
-const getRef = (ref) => gameState.find(({name}) => name === ref)
-
-const createTurnDecays = ({name}) => {
-  let countryRef = getRef(name)
-  countryRef.mat = countryRef.mat - (countryRef.medborgare * 2) - (countryRef.soldater * 5)
-  countryRef.guld = Math.round(countryRef.guld + (countryRef.medborgare / 1000))
-  if (countryRef.mat < 0) {
-    countryRef.mat = 0
-    countryRef.medborgare = Math.round(countryRef.medborgare - (countryRef.medborgare * 0.05))
-    countryRef.soldater = Math.round(countryRef.soldater - (countryRef.soldater * 0.01))
-  }
-  if (countryRef.medborgare < 1000) {
-    countryRef.guld = Math.round(countryRef.guld - (countryRef.guld * 0.01))
-  }
-  if (countryRef.religion == 'Islam')
-  {
-    countryRef.guld = Math.round(countryRef.guld + 50)
-  }
-  if (countryRef.religion == 'Katolicism')
-  {
-    countryRef.guld = Math.round(countryRef.guld + 5)
-    countryRef.soldater = Math.round(countryRef.soldater + 50)
-  }
-  if (countryRef.religion == 'Protestantism')
-  {
-    countryRef.guld = Math.round(countryRef.guld + 20)
-    countryRef.handelsmän = Math.round(countryRef.handelsmän + 1)
-  }
-  if(countryRef.kolonier == 1 ){
-    countryRef.guld = Math.round(countryRef.guld + 100)
-    countryRef.mat = Math.round (countryRef.mat - 1000)
-    countryRef.alkohol = Math.round(countryRef.alkohol + 5)
-    countryRef.textil = Math.round(countryRef.textil + 5)
-  }
-  if(countryRef.kolonier == 2 ){
-    countryRef.guld = Math.round(countryRef.guld + 200)
-    countryRef.mat = Math.round (countryRef.mat - 2000 )
-    countryRef.alkohol = Math.round(countryRef.alkohol + 10)
-    countryRef.textil = Math.round(countryRef.textil + 10)
-  }
-  if(countryRef.kolonier == 3 ){
-    countryRef.guld = Math.round(countryRef.guld + 300)
-    countryRef.mat = Math.round (countryRef.mat - 3000)
-    countryRef.alkohol = Math.round(countryRef.alkohol + 15)
-    countryRef.textil = Math.round(countryRef.textil + 15)
-  }
-}
-
-const selector = (id) => document.querySelector(`#${id}`)
-
-const addEventListener = (id, trigger, fn) => selector(id) && selector(id).addEventListener(trigger, fn)
-const removeEventListener = (id, trigger, fn) => selector(id) && selector(id).removeEventListener(trigger, fn)
-
-const updateValueOfProperty = (id, value) => selector(id) && (selector(id).innerHTML = value)
-
-const updateAllCountryKeys = ({name}) => {
-  let countryRef = getRef(name)
-  Object.keys(countryRef).forEach(key => {
-    const value = countryRef[key]
-    key !== name && updateValueOfProperty(`${name}-${key.toUpperCase()}`, value.toString())
-  })
-}
-
-const showGameState = () => gameState.forEach(updateAllCountryKeys)
-
-const handleNextRound = () => {
-  gameState.forEach(createTurnDecays)
-  showGameState()
-}
-
-addEventListener('nästaRunda', 'click', handleNextRound)
-
-const handleEdit = (country) => () => {
-  currentlyEditing = country
-  selector('jsonField').value = JSON.stringify(getRef(country), null, 2)
-}
-
-const saveCurrentlyEditting = (country) => {
-  try {
-    const json = selector('jsonField').value.split(' ').join('')
-    const parsed = JSON.parse(json)
-    Object.assign(getRef(country), parsed)
-    showGameState()
-  } catch (error) {
-    alert('invalid JSON pls call 911')
-    console.log(error)
-  }
-}
-
-addEventListener('closeModalBtn', 'click', () => {
-  saveCurrentlyEditting(currentlyEditing)
-})
-
-addEventListener('spanien-modal', 'click', handleEdit('SPANIEN'))
-addEventListener('osmanska-modal', 'click', handleEdit('OSMANSKA-RIKET'))
-addEventListener('nederlanderna-modal', 'click', handleEdit('NEDERLÄNDERNA'))
-addEventListener('frankrike-modal', 'click', handleEdit('FRANKRIKE'))
-addEventListener('england-modal', 'click', handleEdit('ENGLAND'))
-
-const init = () => {
-  showGameState()
-}
-
-init()
-</script>
